--- a/app_dwi/libreria/src/app/bienvenida/bienvenida.component.html
+++ b/app_dwi/libreria/src/app/bienvenida/bienvenida.component.html
@@ -1,14 +1,17 @@
 <body>
     <div class="container p-4">
         <div class="container">
-            <div class="jumbotron">
-                <h1 class="Librería">Librería</h1>
-                <p class="lead">¡Bienvenido a la librería del saber, donde podrás encontrar libros que no podras dejar de leer!</p>
-                <p>¡Disfruta leyendo y aprendiendo sobre romance, acción, ficción y todo lo que quieras imaginar en nuestra extensa variedad de libros!</p>
-                <a href="/home" class="btn btn-primary btn-lg">
-                    ¡Explorar Librería!
-                </a>
+                <h1 class="titulo">GreenFood</h1>
+                <div class="Letter">
+                    <br/>
+                    <p>¡Bienvenido a GreenFood en donde encontraras los productos que necesites</p>
+                    <br/>
+                    <p>Encontrars todo lo necesario para tu despensa y podras comprar cualquier producto y recibirlo en la comunidad de tu casa.</p>
+              </div>
+              <div>
+                  <a href="/home" class="btn btn-success btn-lg" style="float: right;">
+                ¡Explorar GreenFood!
+            </a></div>
             </div>
-        </div>
     </div>
 </body>
