--- a/app_dwi/libreria/src/app/perfil-usuario/perfil-usuario.component.css
+++ b/app_dwi/libreria/src/app/perfil-usuario/perfil-usuario.component.css
@@ -1,8 +1,8 @@
 .square {
   position: relative;
   width: 100%;
-  height: 50%;
-  background: linear-gradient(to bottom, #f7c2ad, white);
+  height: 150%;
+  background: linear-gradient(to bottom, #7FFF00, #ffffff);
 }
 .imgRedonda{
   width:220px;
@@ -42,7 +42,7 @@
 .editar{
   position: absolute;
   z-index: 2;
-  top: 5.3em;
+  top: 5.0em;
   right: 30%;
 }
 
@@ -53,7 +53,7 @@
    margin-right: 10%;
    z-index: 4;
    transform: translateY(100%);
-   background-color:#f5d4c7 ; 
+   background-color: #7FFF00 ; 
    border: #000 1px solid ; 
    border-radius: 10px;
    color: rgb(14, 13, 13);
@@ -77,7 +77,7 @@
       font-family:Verdana,Helvetica;
       font-weight:bold;
       color:white;
-      background:#da75a4;
+      background:#080808;
       border:0px;
       width:78px;
       height:20px;
@@ -89,7 +89,7 @@
     margin-right: 10%;
     z-index: 4;
     transform: translateY(100%);
-    background-color:#f5d4c7 ; 
+    background-color:#7FFF00 ; 
     border: #000 1px solid ; 
     border-radius: 10px;
     color: rgb(14, 13, 13);
@@ -98,7 +98,7 @@
       position: relative;
       width: 100%;
       height: 50%;
-      background: linear-gradient(to bottom, #f7c2ad, white);
+      background: linear-gradient(to bottom, #7FFF00, #ffffff);
     }
     .imgRedonda{
       width:220px;
