--- a/app_dwi/libreria/src/styles.css
+++ b/app_dwi/libreria/src/styles.css
@@ -48,8 +48,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 
   .fondo_libro{
-    background-image: url(assets/images/fondo.jpg);
-    width: 100%;  
+    background-image: url(assets/images/fondo2.jpg);
+    width: 100%; 
     min-height: 100vh;
     display: -webkit-box;
     display: -webkit-flex;
@@ -77,7 +77,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: rgba(255, 255, 255, 0.603);
   }
   .fondo_User{
-    background-image: url(assets/images/fondo.jpg);
+    background-image: url(assets/images/fondo2.jpg);
     width: 100%;  
     /* margin-top: 56px; */
     min-height: 100vh;
