--- a/app_dwi/libreria/src/app/components/nav-bar/nav-bar.component.html
+++ b/app_dwi/libreria/src/app/components/nav-bar/nav-bar.component.html
@@ -2,13 +2,13 @@
 <a href="" class="nav-link" [routerLink]="['home']">Librería</a> -->
 
 <mat-toolbar class="tool" #tool>
-    <div *ngIf="!this.search">Libreria</div>
+    <div *ngIf="!this.search">GreenFood</div>
     <div *ngIf="this.state">
-        <a href="" [routerLink]="['/home']"><img src="https://acegif.com/wp-content/gifs/book-22.gif" class="borde" /> 
-                <div style="position: absolute;left: 70px; top: 20px;">
-                    <h3 *ngIf="title" class="hover1">Librería</h3>
-                    <h3 *ngIf="!title"class="hover2">Librería</h3>
-                </div>
+        <a href="" [routerLink]="['/home']"><img src="../../../assets/images/greegF.png" class="borde" /> 
+               <!--  <div style="position: absolute;left: 90px; top: 20px;">
+                    <h3 *ngIf="title" class="hover1">GreenFood</h3>
+                    <h3 *ngIf="!title"class="hover2">GreenFood</h3>
+                </div> -->
         </a>
     </div>
 
