--- a/app_dwi/libreria/src/app/info-libro/info-libro.component.html
+++ b/app_dwi/libreria/src/app/info-libro/info-libro.component.html
@@ -3,8 +3,8 @@
 <app-nav-bar ></app-nav-bar>  
 <div class="content" style="margin-top: 56px; position: absolute;width: 100%;">
     <div class="row animated fadeIn fast fondo_libro">
-        <div class="col-md-4">
-            <img [src]="libro.RutaDeImagen" class="img-fluid" [alt]="libro.Titulo">
+        <div class="col-md-4">}
+            <img width="300px" height="300px" [src]="libro.RutaDeImagen" [alt]="libro.Titulo">
             <br><br>
             <a [routerLink] = "['/home']" class="btn btn-outline-danger btn-block">Regresar</a>
 
