--- a/app_dwi/libreria/src/app/info-libro/info-libro.component.html
+++ b/app_dwi/libreria/src/app/info-libro/info-libro.component.html
@@ -3,7 +3,7 @@
 <app-nav-bar ></app-nav-bar>  
 <div class="content" style="margin-top: 56px; position: absolute;width: 100%;">
     <div class="row animated fadeIn fast fondo_libro">
-        <div class="col-md-4">}
+        <div class="col-md-4">
             <img width="300px" height="300px" [src]="libro.RutaDeImagen" [alt]="libro.Titulo">
             <br><br>
             <a [routerLink] = "['/home']" class="btn btn-outline-danger btn-block">Regresar</a>
@@ -11,13 +11,13 @@
         </div>
     
         <div class="col-md-8">
-            <h2 class="animated fadeIn" style="text-align: center;color: black;">{{ libro.Titulo }}</h2>
+            <h2 class="animated fadeIn" style="text-align: center;color: black;">{{ libro.Producto }}</h2>
             <hr>
-            <p><img width="50px" height="50px" src="https://www.gandhi.com.mx/media/wysiwyg/imagenes/detalles/numero_de_paginas.png"> Editorial: {{ libro.Editorial }}</p>
-            <p><img width="50px" height="50px" src="https://www.gandhi.com.mx/media/wysiwyg/imagenes/detalles/edicion.png"> Autor(a): {{ libro.Autor }}</p>
-            <p><img width="50px" height="50px" src="https://www.gandhi.com.mx/media/wysiwyg/imagenes/detalles/sku.png"> Clave ISBN: {{ libro.Clave }}</p>
-            <p><img width="50px" height="50px" src="https://icon-icons.com/icons2/906/PNG/48/invoice_icon-icons.com_70095.png"> Precio: {{ libro.Precio }}</p>
-            <p><img width="50px" height="50px" src="https://www.gandhi.com.mx/media/wysiwyg/imagenes/detalles/formato.png"> Unidades disponible: {{ libro.UnidadesDisponibles }}</p>
+            <p><img width="50px" height="50px" src="../../assets/images/product.png"> Producto: {{ libro.Producto }}</p>
+            <p><img width="50px" height="50px" src="../../assets/images/marca.png"> Marca: {{ libro.Marca }}</p>
+            <p><img width="50px" height="50px" src="../../assets/images/clave.png"> Clave: {{ libro.Clave }}</p>
+            <p><img width="50px" height="50px" src="../../assets/images/Precio.png"> Precio: {{ libro.Precio }}</p>
+            <p><img width="50px" height="50px" src="../../assets/images/unidad.png"> Unidades disponible: {{ libro.UnidadesDisponibles }}</p>
     
         </div>
         <div class="container">
@@ -30,7 +30,14 @@
                 </div>
                 <div *ngIf="libro.UnidadesDisponibles">
                     <div class="col" *ngIf="!this._LibrosService.getAdmin()">
-                        <button id="btnEliminar" type="button" class="btn btn-primary btn-lg btn-block" (click)="Prestamo()">Solicitar préstamo</button>
+                        <button id="btnEliminar" type="button" class="btn btn-primary btn-lg btn-block" (click)="Prestamo()">Agregar al carrito</button>
+                    </div>
+                </div>
+                <br>
+                <br><br>
+                <div *ngIf="libro.UnidadesDisponibles">
+                    <div class="col" *ngIf="!this._LibrosService.getAdmin()">
+                        <button id="btnEliminar" type="button" class="btn btn-warning btn-lg btn-block" >Comprar ahora</button>
                     </div>
                 </div>
                 <div *ngIf="!libro.UnidadesDisponibles">
