--- a/app_dwi/libreria/src/app/prestamo/prestamo.component.html
+++ b/app_dwi/libreria/src/app/prestamo/prestamo.component.html
@@ -29,16 +29,16 @@
             <table class="table table-dark">
                 <thead>
                     <tr>
-                        <th style="font-size: 15px;">Título</th>
-                        <th style="font-size: 15px;">Editorial</th>
+                        <th style="font-size: 15px;">Producto</th>
+                        <th style="font-size: 15px;">Marca</th>
                         <th style="font-size: 15px;">Precio</th>
                         <th style="font-size: 15px;">Clave</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>{{libro.Titulo }}</td>
-                        <td>{{ libro.Editorial }}</td>
+                        <td>{{libro.Producto }}</td>
+                        <td>{{ libro.Marca }}</td>
                         <td>{{ libro.Precio }}</td>
                         <td>{{ libro.Clave }}</td>
                     </tr>
