parte del login y agregar

--- a/app_dwi/libreria/src/app/login/login.component.html
+++ b/app_dwi/libreria/src/app/login/login.component.html
@@ -9,24 +9,19 @@
 	</div>
 
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('./assets/images/fondo.jpg');">
+		<div class="container-login100" style="background-image: url('./assets/frut.jpg');">
 			
 			<div class="wrap-login100" style="margin: 0%;">
 			
 					<span class="login100-form-logo" >
-						<img src="./assets/user.png">
+						<img src="./assets/yea.png" style="width: 20rem;">
 					</span>
 
 					<span style="margin:0%; padding:0%" class="login100-form-title p-b-34 p-t-27">
-						Ingresar
+					
 					</span>
 
-					<div class="text-center p-t-90" style="margin: 0%; text-align: center;">
-						<p>¿No tienes cuenta?</p>
-						<a class="txt1" href="/registro">
-							Crear cuenta
-						</a>
-					</div>
+					
 
 					
 					<div class="wrap-input100 validate-input" data-validate = "Necesita ingresar nombre de usuario">
@@ -57,6 +52,12 @@
 						<button value="ingresar" class="login100-form-btn" (click)='Check_Des(email.value,pass.value)'>
 							Ingresar
 						</button>
+					</div>
+					<div class="text-center p-t-90" style="margin: 0%; text-align: center;">
+						<p>¿No tienes cuenta? <a class="txt1" href="/registro">
+							Crear cuenta
+						</a></p>
+						
 					</div>
 					
 
