I added style on registro component

--- a/app_dwi/libreria/src/app/registro/registro.component.html
+++ b/app_dwi/libreria/src/app/registro/registro.component.html
@@ -1,5 +1,10 @@
-<div class="content fondo_User" style="position: absolute;width: 100%; height: auto;">
+<div class="content image" style="position: absolute;width: 100%; height: auto;">
+	<!-- <div class="row">
+		<div col-md-12><img src="../../assets/logofruta.jpeg" class="logo"></div>
+	</div> -->
+	
     <main>
+		<img src="../../assets/logofruta.jpeg" class="logo">
 		<form class="formulario" [formGroup]="RegistroFormGrup" (ngSubmit)="AddUser(RegistroFormGrup)">
 			<div class="formulario__grupo" id="grupo__usuario">
 				<label for="FirstName" class="formulario__label">Nombre</label>
