--- a/app_dwi/libreria/src/app/registro/registro.component.css
+++ b/app_dwi/libreria/src/app/registro/registro.component.css
@@ -20,6 +20,8 @@ main {
 
 .formulario__grupo-input {
 	position: relative;
+	border: solid 1px #556b2f;
+	border-radius: 20px;
 }
 
 
@@ -28,7 +30,7 @@ main {
 	/* background: #E5E5E5; */
 	background: #FFFFFF;
 	border: 3px solid transparent;
-	border-radius: 3px;
+	border-radius: 20px;
 	height: 45px;
 	line-height: 45px;
 	padding: 0 40px 0 10px;
@@ -36,7 +38,7 @@ main {
 }
 
 .formulario__input:focus {
-	border: 3px solid #0075FF;
+	border: 3px solid #d9d63f;
 	outline: none;
 	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
 }
@@ -104,11 +106,11 @@ main {
 	height: 45px;
 	line-height: 45px;
 	width: 100%;
-	background: #000;
+	background: #556b2f;
 	color: #fff;
 	font-weight: bold;
 	border: none;
-	border-radius: 3px;
+	border-radius: 20px;
 	cursor: pointer;
 	transition: .1s ease all;
 }
@@ -164,4 +166,42 @@ main {
 		width: 100%;
 	}
 	
+}
+.image{
+	background-image: url('https://media.istockphoto.com/vectors/fruit-and-berry-background-abstract-food-seamless-pattern-fresh-vector-id1194235751');
+	width: 100%;  
+    min-height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
+  
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+ }
+ .image::before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.603);
+  }
+.logo{
+	width: 40%;
+	height: auto;
+	margin-left: 30%;
+	margin-bottom: 5%;
+}
+.col-md-12{
+	margin-left: 66%;
 }
