--- a/app_dwi/libreria/src/app/perfil-usuario/perfil-usuario.component.css
+++ b/app_dwi/libreria/src/app/perfil-usuario/perfil-usuario.component.css
@@ -2,8 +2,38 @@
   position: relative;
   width: 100%;
   height: 150%;
-  background: linear-gradient(to bottom, #7FFF00, #ffffff);
+  background: linear-gradient(to bottom, #708b00, #ffffff);
 }
+
+.image{
+  background-image: url('https://media.istockphoto.com/vectors/fruit-and-berry-background-abstract-food-seamless-pattern-fresh-vector-id1194235751');
+  width: 100%;  
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 15px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+}
+.image::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.603);
+}
+
 .imgRedonda{
   width:220px;
   height:220px;
@@ -53,7 +83,7 @@
    margin-right: 10%;
    z-index: 4;
    transform: translateY(100%);
-   background-color: #7FFF00 ; 
+   background-color: #708b00 ; 
    border: #000 1px solid ; 
    border-radius: 10px;
    color: rgb(14, 13, 13);
@@ -89,7 +119,7 @@
     margin-right: 10%;
     z-index: 4;
     transform: translateY(100%);
-    background-color:#7FFF00 ; 
+    background-color:#708b00 ; 
     border: #000 1px solid ; 
     border-radius: 10px;
     color: rgb(14, 13, 13);
@@ -98,7 +128,7 @@
       position: relative;
       width: 100%;
       height: 50%;
-      background: linear-gradient(to bottom, #7FFF00, #ffffff);
+      background: linear-gradient(to bottom, #708b00, #ffffff);
     }
     .imgRedonda{
       width:220px;
@@ -141,6 +171,8 @@
       top: 4em;
       right: 30%;
     }
+
+
   }
   @media screen and (max-width: 600px) {
     table {
