--- a/app_dwi/libreria/src/app/perfil-usuario/perfil-usuario.component.html
+++ b/app_dwi/libreria/src/app/perfil-usuario/perfil-usuario.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
     <div class="content square" style="margin-top: 56px; position: absolute;width: 100%;">
-        <div class="row animated fadeIn fast fondo_libro">
+        <div class="row animated fadeIn fast image">
             <div class="col-md-4">
                 <div class="content-mat-icon">
                     <mat-icon aria-hidden="false" aria-label="Example edit icon">edit</mat-icon>
