--- a/app_dwi/libreria/src/app/components/nav-bar/nav-bar.component.html
+++ b/app_dwi/libreria/src/app/components/nav-bar/nav-bar.component.html
@@ -51,7 +51,7 @@
         <button [routerLink]="['/upload']" mat-button class="menu-button"
             style="position: absolute; top: 40%; width: 90%" *ngIf="admin">
             <mat-icon>book</mat-icon>
-            <span> Subir libro</span>
+            <span> Subir producto</span>
         </button>
 
         <button mat-button class="menu-button" style="position: absolute; top: 50%; width: 90%">
