--- a/app_dwi/libreria/src/app/prestamo/prestamo.component.html
+++ b/app_dwi/libreria/src/app/prestamo/prestamo.component.html
@@ -32,7 +32,7 @@
     </div>
     <br>
     <div class="row">
-        <h2>Total de la Compra: ${{ this.total }}</h2>
+        <h2>Precio Total: ${{ this.total }}</h2>
         <div style="text-align: center;" class="col col-md-12">
             <!-- <input class="btn btn-outline-primary btn-lg btn-block" (click)="AddPrestamo()" value="Pagar"> -->
             <ngx-paypal [config]="payPalConfig"></ngx-paypal>
